# prostate-cancer

./: .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  data.csv  data_2.csv  evaluation.ipynb  precompute_cluster_segment.py  precompute_clustering_segmentation.py  precompute_clustering_segmentation_original.py  precompute_collect_activations.py  pyproject.toml
.gemini/: config.yaml  styleguide.md
.github/workflows/: python-lint.yml
conf/: default.yaml  postprocessing.yaml  predict_xai_test.yaml  report.yaml
conf/data/: embeddings_datamodule.yaml
conf/datamodule/: wsi.yaml
conf/experiment/: test.yaml  test_heatmaps.yaml  train_alexnet.yaml  train_alexnet_without_valid.yaml  train_base.yaml  train_resnet50.yaml  train_resnet50_without_valid.yaml  train_vgg16.yaml  train_vgg16_without_valid.yaml  train_without_valid_base.yaml
conf/exploration/: mmci_2k.yaml
conf/hydra/: default.yaml
conf/metadata/: base.yaml  testing.yaml
conf/ml/: prostate_cancer.yaml
conf/model/: vgg16_model.yaml
conf/postprocessing/: base.yaml  kernel_estimation.yaml  slide_level_eval.yaml
conf/preprocessing/: base.yaml  data_split.yaml  resize_wsi.yaml  tile_embeddings.yaml  tiling.yaml
conf/trainer/: default.yaml
configs/: correction.yaml  default.yaml  ml.yaml  postprocessing.yaml  preprocessing.yaml  preprocessing_base.yaml  prostate_cancer.yaml
configs/aggregator/: max.yaml  mean_pool_max.yaml  span.yaml  top_k.yaml
configs/callbacks/: aggregator.yaml  aggregator_estimation.yaml  cam.yaml  carcinoma_prediction_table.yaml  combined_test_suite.yaml  combined_test_suite_mil.yaml  curves.yaml  curves_mil.yaml  curves_sl.yaml  curves_tl.yaml  heatmap.yaml  heatmap_and_aggregator.yaml  kernel_estimation.yaml  mil_prediction_callback.yaml  multi_aggregator_eval.yaml  nested_metrics.yaml  nested_metrics_mil.yaml  slide_histograms_mil.yaml  slide_threshold_mil.yaml  tile_histograms.yaml  tile_histograms_mil.yaml  tile_threshold.yaml  tile_threshold_mil.yaml  tile_threshold_tl.yaml  train.yaml
configs/correction/: correct_metadata.yaml  correct_tiles.yaml
configs/data/: comenius_3_sample.yaml  graz_sample.yaml  images_datamodule.yaml  karolinska.yaml  mmci_endoresection.yaml  mmci_sl.yaml  mmci_sl_group_1.yaml  mmci_sl_group_2.yaml  mmci_tl.yaml  mmci_tl_test.yaml  mmci_tl_train.yaml  mmci_tl_val.yaml  radboud.yaml  radboud_test.yaml  radboud_train.yaml  radboud_train_val.yaml  radboud_val.yaml
configs/datamodule/: bag_of_embeddings_datamodule.yaml  classic_bag_of_embeddings_datamodule.yaml  embeddings_datamodule.yaml  images_datamodule.yaml  images_processor_datamodule.yaml  slide_embeddings_datamodule.yaml  tile_embeddings_datamodule.yaml
configs/exploration/: comenius_3_sample.yaml  fn_brno.yaml  mug_400.yaml  panda.yaml
configs/logger/: mlflow.yaml
configs/model/: google_vit_model.yaml  pgp_classic_mil_model.yaml  pgp_full_model.yaml  pgp_mil_model.yaml  pgp_model.yaml  resnet50_model.yaml  vgg16_model.yaml  virchow2_classic_mil_model.yaml  virchow2_full_model.yaml  virchow2_hybrid_mil_model.yaml  virchow2_mil_model.yaml  virchow2_model.yaml
configs/overlappers/: blur.yaml  blur_512.yaml  carcinoma.yaml  carcinoma_512.yaml  classic_overlappers.yaml  classic_overlappers_512.yaml  folding.yaml  folding_512.yaml  residual.yaml  residual_512.yaml  tissue.yaml  tissue_512.yaml
configs/postprocessing/: eval_estimation.yaml  kernel_estimation.yaml  slide_level_curves.yaml  slide_level_eval.yaml  slide_prediction_table_merge.yaml  slide_predictions_table.yaml  slide_predictions_table_merge.yaml
configs/preprocessing/: annot_masks.yaml  base.yaml  data_split.yaml  filter_embeddings.yaml  filter_tiles.yaml  group_split.yaml  k_fold.yaml  mean_and_std.yaml  merge_embeddings.yaml  qc_masks.yaml  quality_control_v2.yaml  repath_normalization.yaml  resize_wsi.yaml  simple_split.yaml  tile_embeddings.yaml  tile_embeddings_v2.yaml  tile_masks.yaml  tile_survival.yaml  tiling.yaml  tiling_v2.yaml  tissue_masks.yaml  untie_masks.yaml
configs/preprocessing_stage/: data_split.yaml  (+7 more)
correction/: correct_metadata.py  correct_tiles.py
deployment/: .dockerignore  Dockerfile  empaia.ead.json  ray-service.yaml  requirements.txt
explainability/: ciao_topdown.ipynb  playground.ipynb  precomputing.py  typing.py
exploration/: comenius_3_sample.py  fn_brno.py  mmci_2k.py  mug_400.py  panda.py  slide_class.py
postprocessing/: eval_estimation.py  kernel_est.py  kernel_estimation.py  merge_pred_tables.py  read_table.py  slide_curves.py  slide_eval.py  slide_level_curves.py  slide_level_eval.py  slide_prediction_table.py  slide_prediction_table_merge.py  slide_roc.py
preprocessing/: filter_tiles.py  group_split.py  k_fold.py  repath_normalization.py  resize_wsi.py  simple_split.py  stats.py  stratified_group_split.py
prostate_cancer/: __init__.py  __main__.py  _mlflow_compat.py  attention_mil_model.py  base_model.py  classic_mil_model.py  cnn_model.py  embedding_model.py  foundation_model.py  log_title.py  main.py  mil_model_base.py  prostate_cancer_model.py  typing.py  vit_model.py
(+1202 files in other folders)
