[project]
name = "prostate-cancer"
version = "0.1.0"
authors = [
    { name = "Jozef Kraus", email = "jozefkraus@mail.muni.cz" },
    { name = "Adam Džadoň", email = "524839@mail.muni.cz" },
    { name = "Vít Musil", email = "vit.musil@mail.muni.cz" },
    { name = "Michal Jakubík", email = "jakubik@mail.muni.cz" },
    { name = "Matej Gallo", email = "gallo.matej@mail.muni.cz" },
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "lightning==2.6.0",
    "albumentations>=2.0.8",
    "pandas>=2.2.3",
    "torch>=2.9.1",
    "torchvision>=0.22.0",
    "triton>=3.3.0", 
    "tqdm==4.67.1",
    "rationai-masks @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git",
    "rationai-mlkit @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git",
    "rationai-tiling @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/tiling.git",
    "rationai-staining @ git+https://@gitlab.ics.muni.cz/rationai/digital-pathology/libraries/staining.git",
    "numpy==2.2.5",
    "timm==1.0.15",
    "matplotlib==3.10.1",
    "scikit-learn==1.6.1",
    "openpyxl==3.1.5",
    "mlflow==2.21.3",
    "deprecated",
    "pillow==11.3.0",
    "huggingface_hub",
]

[tool.pdm.scripts]
fit = "python -m prostate_cancer mode=fit"
validate = "python -m prostate_cancer mode=validate"
test = "python -m prostate_cancer mode=test"
predict = "python -m prostate_cancer mode=predict"
l = { composite = ["lint", "format", "mypy"] }
lint = "ruff check --fix"
format = "ruff format"
mypy = "mypy ."
post_install = { composite = [
    "pre-commit autoupdate",
    "pre-commit install",
    "pre-commit install --hook-type commit-msg",
] }

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
    "ipykernel>=6.29.5",
]
