[project]
name = "prostate-cancer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }

authors = [
    { name = "Jozef Kraus", email = "jozefkraus@mail.muni.cz" },
    { name = "Adam Džadoň", email = "524839@mail.muni.cz" },
    { name = "Vít Musil", email = "vit.musil@mail.muni.cz" },
    { name = "Michal Jakubík", email = "jakubik@mail.muni.cz" },
    { name = "Matej Gallo", email = "gallo.matej@mail.muni.cz" },
]

dependencies = [
    "lightning==2.6.0",
    "albumentations>=2.0.8",
    "pandas>=2.2.3",
    "torch>=2.9.1",
    "torchvision>=0.22.0",
    "triton>=3.3.0",
    "tqdm==4.67.1",
    "rationai-masks @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git",
    "rationai-mlkit @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/mlkit.git@549f5be72a162e7debf3a911ea4649f50080b1d0",
    "rationai-tiling @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/tiling.git",
    "rationai-staining @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/staining.git",
    "numpy==2.2.5",
    "timm==1.0.15",
    "matplotlib==3.10.1",
    "scikit-learn==1.6.1",
    "openpyxl==3.1.5",
    "mlflow==2.21.3",
    "deprecated",
    "pillow==11.3.0",
    "huggingface_hub",
]

[dependency-groups]
dev = ["mypy", "ruff"]
