[project]
name = "prostate-cancer"
version = "0.1.0"
description = "A project for prostate cancer detection in digital pathology slides."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }

authors = [
    { name = "Jozef Kraus", email = "jozefkraus@mail.muni.cz" },
    { name = "Adam Džadoň", email = "524839@mail.muni.cz" },
    { name = "Vít Musil", email = "vit.musil@mail.muni.cz" },
    { name = "Michal Jakubík", email = "jakubik@mail.muni.cz" },
    { name = "Matej Gallo", email = "gallo.matej@mail.muni.cz" },
]

dependencies = [
    "lightning==2.6.0",
    "albumentations>=2.0.8",
    "pandas>=2.2.3",
    "torch>=2.9.1",
    "torchvision>=0.22.0",
    "triton>=3.3.0",
    "tqdm==4.67.1",
    "rationai-masks @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/masks.git",
    "rationai-mlkit @ git+https://github.com/RationAI/mlkit.git@d0fab0cf8aba8f2cf3cb34be50040d6b3b4d1448",
    "rationai-tiling @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/tiling.git",
    "rationai-staining @ git+https://gitlab.ics.muni.cz/rationai/digital-pathology/libraries/staining.git",
    "rationai-sdk @git+https://github.com/RationAI/rationai-sdk-python.git@68904dfd216ce19454e08a032f7e4dd978a85707",
    "numpy>=2.3.2",
    "timm==1.0.15",
    "matplotlib==3.10.1",
    "scikit-learn==1.8.0",
    "openpyxl==3.1.5",
    "mlflow==3.12.0",
    "deprecated>=1.3.1",
    "pillow==11.3.0",
    "huggingface_hub>=1.12.2",
    "ratiopath>=1.1.2",
    "regex>=2026.2.28",
    "transformers>=5.7.0",
    "ray[data]>=2.52.1",
    "ipykernel>=7.2.0",
    "datasets>=4.6.1",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pre-commit",
]
